# l2l-lab

./: .gitignore  CLAUDE.md  README.md  Tester.py  Trainer.py  application.example.yml  checkpoint_utils.py  graphs.py  install.md  main.py  pyproject.toml  requirements.example.txt  train_rllib.py  train_scs_rllib.py
agents/: __init__.py  agent.py  mcts_agent.py  policy_agent.py  random_agent.py  rl_module_agent.py
backends/: __init__.py  base.py  obs_utils.py
backends/alphazoo/: agent.py  backend.py
backends/rllib/: backend.py
bots/: project.md
configs/: .stignore
configs/definition/: AlgorithmConfig.py  NetworkConfig.py  TestingConfig.py  TrainingConfig.py  utils.py
configs/files/: training_config.example.yml
configs/search/: complete_search_config.example.yml  partial_search_config.example.yml
configs/testing/: testing_config.example.yml  testing_mcts_config.example.yml
configs/training/: alphazoo_training_config.example.yml  connect_four_training_config.example.yml  impala_training_config.example.yml  ppo_training_config.example.yml  recurrentnet_connect_four_training_config.example.yml  recurrentnet_tictactoe_training_config.example.yml
docs/: configuration.md  install.md  project.md
envs/: registry.py
envs/factories/: pettingzoo_classic.py
neural_networks/: Network_Manager.py
neural_networks/architectures/: ConvNet.py  MLP_Network.py  RecurrentNet.py  ResNet.py  __init__.py  blocks.py  depthwise_conv.py
rllib/: DualHeadRLModule.py  SCSTester.py  SCSTrainer.py  Tester.py  Trainer.py  checkpoint_utils.py  dual_head_torch_model.py  graphs.py  train_scs_rllib.py
rllib/algorithms/: base.py  icm.py  impala.py  multi_policy.py  ppo.py
rllib/modules/: RandomRLModule.py
src/l2l_lab/: __init__.py  cli.py
test/: _train_utils.py  conftest.py  test_csv_writer.py  test_testing_flow.py  test_training_alphazero.py  test_training_alphazoo_connect_four.py  test_training_alphazoo_tictactoe.py  test_training_impala.py  test_training_ppo.py  test_training_resume.py  test_training_rllib_resnet.py
test/configs/: alphazero_resnet_tictactoe.yml  search_test.yml  (+15 more)
(+148 files in other folders)
