[build-system]
requires = ["flit_core>=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "l2l_lab"
version = "0.1.0"
description = "A laboratory for exploring learning-to-learn algorithms and reinforcement learning techniques"
readme = "README.md"
requires-python = ">=3.14"
authors = [{name = "Guilherme Palma"}]
dependencies = [
    "numpy~=2.3",
    "torch~=2.9",
    "pettingzoo[classic]~=1.26",
    "gymnasium~=1.2",
    "ray[default,rllib]~=2.55",
    "matplotlib~=3.10",
    "hexagdly~=2.0",
    "pyyaml~=6.0",
    "omegaconf>=2.4.0.dev0",
    "pydantic~=2.11",
    "psutil~=7.0",
    "wandb~=0.18",
]

[project.scripts]
l2l-lab = "l2l_lab.cli:main"

[tool.flit.module]
name = "l2l_lab"

[dependency-groups]
test = [
    "pytest~=8.3",
    "py-spy~=0.4",
]


dev = [
    {include-group = "test"},
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_classes = ["DoNotSearchClasses"] # We do not use class-based tests.
